configs/clusters-ng/production/04-stage/argo-workflows/ingress.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: argo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: argo.local.d20.fan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port:
              number: 2746
  tls:
  - hosts:
    - argo.local.d20.fan
